[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
description = "AWS SDK for Rust - Request Mocking Helpers"
documentation = "https://docs.rs/rusoto_mock"
keywords = ["AWS", "Amazon", "mock", "testing"]
license = "MIT"
name = "rusoto_mock"
repository = "https://github.com/rusoto/rusoto"
version = "0.40.0"
homepage = "https://www.rusoto.org/"
categories = [
  "development-tools::testing"
]
edition = "2018"

[badges]
appveyor = { repository = "rusoto/rusoto", branch = "master" }
azure-devops = { project = "matthewkmayer/Rusoto", pipeline = "rusoto.rusoto", build="1" }

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures-preview = "0.3.0-alpha.19"
http = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.rusoto_core]
version = "> 0.25.0"
path = "../rusoto/core"
default_features = false
features = ["native-tls"]

[features]
nightly-testing = ["rusoto_core/nightly-testing"]
unstable = []
