[workspace]
members = [
    "core",
    "credential",
    "services/acm",
    "services/autoscaling",
    "services/cloudformation",
    "services/cloudfront",
    "services/cloudhsm",
    "services/cloudsearch",
    "services/cloudtrail",
    "services/cloudwatch",
    "services/codecommit",
    "services/codedeploy",
    "services/codepipeline",
    "services/cognito-identity",
    "services/config",
    "services/datapipeline",
    "services/devicefarm",
    "services/directconnect",
    "services/ds",
    "services/dynamodb",
    "services/dynamodbstreams",
    "services/ec2",
    "services/ecr",
    "services/ecs",
    "services/elasticache",
    "services/elasticbeanstalk",
    "services/elastictranscoder",
    "services/elb",
    "services/elbv2",
    "services/emr",
    "services/events",
    "services/firehose",
    "services/iam",
    "services/importexport",
    "services/inspector",
    "services/iot",
    "services/kinesis",
    "services/kms",
    "services/lambda",
    "services/logs",
    "services/machinelearning",
    "services/marketplacecommerceanalytics",
    "services/opsworks",
    "services/organizations",
    "services/rds",
    "services/redshift",
    "services/route53",
    "services/route53domains",
    "services/s3",
    "services/sdb",
    "services/servicecatalog",
    "services/ses",
    "services/sns",
    "services/sqs",
    "services/ssm",
    "services/storagegateway",
    "services/sts",
    "services/swf",
    "services/waf",
    "services/workspaces"
]
