[package]
authors = [
    "Matt Jones <mthjones@gmail.com>",
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
description = "Generates crates for AWS services for the rusoto project"
name = "rusoto_service_crategen"
license = "MIT"
version = "0.1.0"
edition = "2018"

[dependencies]
Inflector = "0.11"
clap = "2.33"
hoedown = "6.0"
lazy_static = "1.4"
rayon = "1.2"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[dependencies.clippy]
optional = true
version = "0.0"

[profile.dev]
opt-level = 1
codegen-units = 2
debug = false
debug-assertions = false

[features]
nightly-testing = []
unstable = []
