[package]
name = "skeptical"
version = "0.43.0-beta1"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
rusoto_core = { path = "../rusoto/core" }
rusoto_dynamodb = { path = "../rusoto/services/dynamodb" }
rusoto_s3 = { path = "../rusoto/services/s3" }
rusoto_ec2 = { path = "../rusoto/services/ec2" }
rusoto_sts = { path = "../rusoto/services/sts" }
env_logger = "0.5"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13" 
