[package]
name = "skeptical"
version = "0.48.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rusoto_core = { path = "../rusoto/core" }
rusoto_credential = { path = "../rusoto/credential" }
rusoto_dynamodb = { path = "../rusoto/services/dynamodb" }
rusoto_ec2 = { path = "../rusoto/services/ec2" }
rusoto_sts = { path = "../rusoto/services/sts" }

doc-comment = "0.3"
env_logger = "0.5"
tokio = "1.0"

[build-dependencies]
glob = "0.3"
