[package]
name = "s3"
version = "0.1.0"
authors = ["andy-thomason <andy@andythomason.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
rusoto_core = "0.45"
rusoto_s3 = { version = "0.45", features = ["serialize_structs"] }
structopt = "0.3"

# note: current implementation requires this version of the tokio runtime.
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
